@trivial card layout spacing fix

--- a/source/less/components/card.less
+++ b/source/less/components/card.less
@@ -268,7 +268,7 @@
         .published,
         .modified {
             float: left;
-            padding-right: 6*@px;
+            //padding-right: 6*@px;
         }
         .links {
             float: right;
